weird behaviour: extrusion of edge + isolated vertexes, only edges are extruded #43154

Closed
opened 2015-01-07 18:33:14 +01:00 by Marco Ardito · 9 comments

System Information
Operating system and graphics card
windows 7 x64 sp1

Blender Version
Broken?: (2.72b 9e963ae, also in 2.73rc1 b4d8fb5, and all older official 2.6x I have)

probably not a bug but perhaps a weird behaviour?

Short description of error
when extruding, in the same command, 1 or more edges and 1 or more isolated vertices, only edges are extruded.
(isolated = not directly attached to the previous selection)
Instead, extruding faces & isolated vertices works well.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  1. open default file
  2. delete default cube (too simple mesh, but any mesh has the problem)
  3. add (eg) a UV sphere
  4. select UV sphere, enter edit mode
  5. select 2 connected vertices (or an edge)
  6. extend selection adding also 1 isolated vertex (isolated = not directly attached to the previous selection)
  7. press E and grab around the extrusion

> only the edge's vertex are extruded.

it seems that it only works as "edges only", and in fact in the toolbar/tools/add/extrude, there are just "edges only" and "vertices only" options... but none extrudes both the edge and the vertex.

with the same command extruding faces & isolated vertices works well, both are extruded, as it seems to do a "region" extrude. and in fact in the toolbar/tools/add/extrude, there are more choices and the default is "region", and both the faces and the vertex are extruded...

see attached .blend

extrusion.blend

**System Information** Operating system and graphics card windows 7 x64 sp1 **Blender Version** Broken?: (2.72b 9e963ae, also in 2.73rc1 b4d8fb5, and all older official 2.6x I have) probably not a bug but perhaps a weird behaviour? **Short description of error** when extruding, in the same command, 1 or more edges and 1 or more isolated vertices, only edges are extruded. (isolated = not directly attached to the previous selection) Instead, extruding faces & isolated vertices works well. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps 1) open default file 2) delete default cube (too simple mesh, but any mesh has the problem) 3) add (eg) a UV sphere 4) select UV sphere, enter edit mode 5) select 2 connected vertices (or an edge) 6) extend selection adding also 1 isolated vertex (isolated = not directly attached to the previous selection) 7) press E and grab around the extrusion # > only the edge's vertex are extruded. it seems that it only works as "edges only", and in fact in the toolbar/tools/add/extrude, there are just "edges only" and "vertices only" options... but none extrudes both the edge and the vertex. with the same command extruding faces & isolated vertices works well, both are extruded, as it seems to do a "region" extrude. and in fact in the toolbar/tools/add/extrude, there are more choices and the default is "region", and both the faces and the vertex are extruded... see attached .blend [extrusion.blend](https://archive.blender.org/developer/F135757/extrusion.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MarcoArdito

Added subscriber: @MarcoArdito

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

Confirmed, I'll take a look

Confirmed, I'll take a look
Antonis Ryakiotakis self-assigned this 2015-01-08 13:20:32 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ideasman42 can you check attached patch? looks like it fixes issue but there may be a corner case that I am not aware of that doesn't work well here.

@ideasman42 can you check attached patch? looks like it fixes issue but there may be a corner case that I am not aware of that doesn't work well here.

This issue was referenced by 1b8240f5af

This issue was referenced by 1b8240f5af34310017b9f245021e31e6b02ae3ce

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1b8240f5af.

Closed by commit 1b8240f5af.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43154
No description provided.